welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:3: error: not found: type lightGray
  setCouleurBrosse(c:lightGray)
                     ^SlugHunting:3: error: not found: value c
  setCouleurBrosse(c:lightGray)
                   ^